591 - QBinaryStreamReader Done. Some test names fixed for QUri.

--- a/trunk/projects/CodeLite/QuimeraEngine/System/System.project
+++ b/trunk/projects/CodeLite/QuimeraEngine/System/System.project
@@ -410,6 +410,7 @@
     <File Name="../../../../headers/QMemoryStream.h"/>
     <File Name="../../../../headers/QUri.h"/>
     <File Name="../../../../source/QUri.cpp"/>
+    <File Name="../../../../headers/QBinaryStreamReader.h"/>
   </VirtualDirectory>
   <VirtualDirectory Name="DataTypes">
     <File Name="../../../../headers/SQAnyTypeToStringConverter.h"/>
