--- a/trunk/testing/projects/CodeLite/QEUnitTests/System/System.project
+++ b/trunk/testing/projects/CodeLite/QEUnitTests/System/System.project
@@ -88,6 +88,7 @@
       <File Name="../../../../tests/unit/testmodule_system/QMemoryStream_Test.cpp"/>
       <File Name="../../../../tests/unit/testmodule_system/QUri_Test.cpp"/>
       <File Name="../../../../tests/unit/testmodule_system/QUriWhiteBox.h"/>
+      <File Name="../../../../tests/unit/testmodule_system/QBinaryStreamReader_Test.cpp"/>
     </VirtualDirectory>
   </VirtualDirectory>
   <VirtualDirectory Name="TestSystem (shared)">
