552 - SQTypeExtensions Done. Added a template specialization to QType. Documentation of QType modified. Some tests of SQAnyTypeToStringConverter have been fixed / refactored.

--- a/trunk/projects/VS2010/QuimeraEngine/System/System.vcxproj
+++ b/trunk/projects/VS2010/QuimeraEngine/System/System.vcxproj
@@ -167,6 +167,7 @@
     <ClInclude Include="..\..\..\..\headers\QUri.h" />
     <ClInclude Include="..\..\..\..\headers\RTTIDefinitions.h" />
     <ClInclude Include="..\..\..\..\headers\SQAnyTypeToStringConverter.h" />
+    <ClInclude Include="..\..\..\..\headers\SQTypeExtensions.h" />
     <ClInclude Include="..\..\..\..\headers\SystemDefinitions.h" />
     <ClInclude Include="..\..\..\..\headers\Workarounds\WinBase_Workarounds.h" />
   </ItemGroup>
@@ -176,6 +177,7 @@
     <ClCompile Include="..\..\..\..\source\QObject.cpp" />
     <ClCompile Include="..\..\..\..\source\SQAnyTypeToStringConverter.cpp" />
     <ClCompile Include="..\..\..\..\source\QUri.cpp" />
+    <ClCompile Include="..\..\..\..\source\SQTypeExtensions.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
