--- a/trunk/testing/projects/VS2010/QEUnitTests/System/System.vcxproj.filters
+++ b/trunk/testing/projects/VS2010/QEUnitTests/System/System.vcxproj.filters
@@ -54,6 +54,12 @@
     <ClCompile Include="..\..\..\..\tests\unit\testmodule_system\QBinaryStreamReader_Test.cpp">
       <Filter>Tests\IO</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\tests\unit\testmodule_system\SQTypeExtensions_Test.cpp">
+      <Filter>Tests\DataTypes</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\tests\unit\testmodule_system\QDerivedFromObject.cpp">
+      <Filter>Tests\DataTypes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\testsystem\CommonConfigDefinitions.h">
@@ -91,6 +97,9 @@
     </ClInclude>
     <ClInclude Include="..\..\..\..\tests\unit\testmodule_system\QUriWhiteBox.h">
       <Filter>Tests\IO</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\tests\unit\testmodule_system\QDerivedFromObject.h">
+      <Filter>Tests\DataTypes</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
