--- a/trunk/projects/CodeLite/QuimeraEngine/System/System.project
+++ b/trunk/projects/CodeLite/QuimeraEngine/System/System.project
@@ -415,5 +415,7 @@
   <VirtualDirectory Name="DataTypes">
     <File Name="../../../../headers/SQAnyTypeToStringConverter.h"/>
     <File Name="../../../../source/SQAnyTypeToStringConverter.cpp"/>
+    <File Name="../../../../headers/SQTypeExtensions.h"/>
+    <File Name="../../../../source/SQTypeExtensions.cpp"/>
   </VirtualDirectory>
 </CodeLite_Project>
