--- a/trunk/testing/projects/VS2010/QEUnitTests/System/System.vcxproj.filters
+++ b/trunk/testing/projects/VS2010/QEUnitTests/System/System.vcxproj.filters
@@ -19,6 +19,9 @@
     <Filter Include="Tests\DataTypes">
       <UniqueIdentifier>{357548f6-cb19-4f7a-80e6-08cc893b5352}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Tests\FileSystem">
+      <UniqueIdentifier>{98ed1d2d-a486-448f-9e40-212febed37fa}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\..\testsystem\EQTestType.cpp">
@@ -59,6 +62,9 @@
     </ClCompile>
     <ClCompile Include="..\..\..\..\tests\unit\testmodule_system\QDerivedFromObject.cpp">
       <Filter>Tests\DataTypes</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\tests\unit\testmodule_system\QPath_Test.cpp">
+      <Filter>Tests\FileSystem</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
