--- a/trunk/testing/projects/VS2010/QEUnitTests/System/System.vcxproj
+++ b/trunk/testing/projects/VS2010/QEUnitTests/System/System.vcxproj
@@ -20,6 +20,7 @@
     <ClCompile Include="..\..\..\..\tests\unit\testmodule_system\QLocalTimeZone_Test.cpp" />
     <ClCompile Include="..\..\..\..\tests\unit\testmodule_system\QMemoryStream_Test.cpp" />
     <ClCompile Include="..\..\..\..\tests\unit\testmodule_system\QObject_Test.cpp" />
+    <ClCompile Include="..\..\..\..\tests\unit\testmodule_system\QPath_Test.cpp" />
     <ClCompile Include="..\..\..\..\tests\unit\testmodule_system\SQAnyTypeToStringConverter_Test.cpp" />
     <ClCompile Include="..\..\..\..\tests\unit\testmodule_system\QUri_Test.cpp" />
     <ClCompile Include="..\..\..\..\tests\unit\testmodule_system\SQTypeExtensions_Test.cpp" />
