554 - QArgumentTrace Done. The RTTI definitions have been improved. The text of the traces has changed in SQAnyTypeToStringConverter.

--- a/trunk/projects/CodeLite/QuimeraEngine/System/System.project
+++ b/trunk/projects/CodeLite/QuimeraEngine/System/System.project
@@ -422,4 +422,8 @@
     <File Name="../../../../headers/SQTypeExtensions.h"/>
     <File Name="../../../../source/SQTypeExtensions.cpp"/>
   </VirtualDirectory>
+  <VirtualDirectory Name="Diagnosis">
+    <File Name="../../../../headers/QArgumentTrace.h"/>
+    <File Name="../../../../source/QArgumentTrace.cpp"/>
+  </VirtualDirectory>
 </CodeLite_Project>
