--- a/trunk/projects/VS2010/QuimeraEngine/System/System.vcxproj.filters
+++ b/trunk/projects/VS2010/QuimeraEngine/System/System.vcxproj.filters
@@ -22,6 +22,9 @@
     <Filter Include="IO\FileSystem">
       <UniqueIdentifier>{a8b72246-8f33-46e5-8b2e-c38bb590a797}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Diagnosis">
+      <UniqueIdentifier>{31a3958d-95b3-4f72-b86b-9433e422f0e8}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\headers\QObject.h">
@@ -58,6 +61,9 @@
     <ClInclude Include="..\..\..\..\headers\QPath.h">
       <Filter>IO\FileSystem</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\headers\QArgumentTrace.h">
+      <Filter>Diagnosis</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\..\source\QObject.cpp">
@@ -80,6 +86,9 @@
     </ClCompile>
     <ClCompile Include="..\..\..\..\source\QPath.cpp">
       <Filter>IO\FileSystem</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\source\QArgumentTrace.cpp">
+      <Filter>Diagnosis</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
