--- a/trunk/testing/projects/CodeLite/QEUnitTests/Tools/Tools.project
+++ b/trunk/testing/projects/CodeLite/QEUnitTests/Tools/Tools.project
@@ -94,6 +94,8 @@
       <File Name="../../../../tests/unit/testmodule_tools/QNTreeIteratorMock.h"/>
       <File Name="../../../../tests/unit/testmodule_tools/QBinarySearchTree_Test.cpp"/>
       <File Name="../../../../tests/unit/testmodule_tools/QBinarySearchTreeWhiteBox.h"/>
+      <File Name="../../../../tests/unit/testmodule_tools/QBinarySearchTreeIterator_Test.cpp"/>
+      <File Name="../../../../tests/unit/testmodule_tools/QBinarySearchTreeIteratorMock.h"/>
     </VirtualDirectory>
     <VirtualDirectory Name="Time">
       <File Name="../../../../tests/unit/testmodule_tools/QDateTime_Test.cpp" ExcludeProjConfig=""/>
