--- a/trunk/testing/projects/CodeLite/QEUnitTests/System/System.project
+++ b/trunk/testing/projects/CodeLite/QEUnitTests/System/System.project
@@ -83,6 +83,8 @@
       <File Name="../../../../tests/unit/testmodule_system/QLocalTimeZoneWhiteBox.h"/>
       <File Name="../../../../tests/unit/testmodule_system/QLocalTimeZone_Test.cpp"/>
       <File Name="../../../../tests/unit/testmodule_system/QDateTimeNow_Test.cpp"/>
+      <File Name="../../../../tests/unit/testmodule_system/QStopwatch_Test.cpp"/>
+      <File Name="../../../../tests/unit/testmodule_system/QStopwatchWhiteBox.h"/>
     </VirtualDirectory>
     <VirtualDirectory Name="IO">
       <File Name="../../../../tests/unit/testmodule_system/QMemoryStream_Test.cpp"/>
