597 - QConstArrayIterator Done. QFixedArray and QDynamicArray classes adapted.

--- a/trunk/testing/projects/CodeLite/QEUnitTests/Tools/Tools.project
+++ b/trunk/testing/projects/CodeLite/QEUnitTests/Tools/Tools.project
@@ -96,6 +96,7 @@
       <File Name="../../../../tests/unit/testmodule_tools/QBinarySearchTreeWhiteBox.h"/>
       <File Name="../../../../tests/unit/testmodule_tools/QBinarySearchTreeIterator_Test.cpp"/>
       <File Name="../../../../tests/unit/testmodule_tools/QBinarySearchTreeIteratorMock.h"/>
+      <File Name="../../../../tests/unit/testmodule_tools/QConstArrayIterator_Test.cpp"/>
     </VirtualDirectory>
     <VirtualDirectory Name="Time">
       <File Name="../../../../tests/unit/testmodule_tools/QDateTime_Test.cpp" ExcludeProjConfig=""/>
